# TRGC

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
configs/: agents.yaml  attack_targets.yaml  attacks.yaml  datasets.yaml  defenses.yaml  experiment_main.yaml  experiment_pilot.yaml  models.example.yaml  protocols.yaml  topologies.yaml
scripts/: aggregate_results.py  aggregate_stage_b_artifacts.py  aggregate_stage_c_manifest_pilot.py  aggregate_standard_metrics.py  audit_dataset_readiness.py  audit_task_quality.py  build_task_manifest.py  check_model_endpoints.py  create_synthetic_tasks.py  diagnose_deepseek_pilot.py  inspect_run_artifact.py  make_figures.py  make_tables.py  prepare_public_datasets.py  print_public_dataset_raw_schema.py  run_main_matrix.py  run_stage_a_smoke.py  run_stage_b_batch.py  run_stage_b_pilot.py  run_stage_c_deepseek_manifest_pilot.py  run_stage_c_deepseek_smoke.py  validate_dataset_consistency.py
tests/: test_agent_runtime.py  test_agent_runtime_usage.py  test_artifact_loader.py  test_artifact_with_judge.py  test_artifact_writer.py  test_attack_manager.py  test_attack_templates.py  test_batch_aggregate.py  test_batch_runner.py  test_batch_writer.py  test_config.py  test_dataset_readiness.py  test_deepseek_smoke_script_safety.py  test_diagnose_deepseek_pilot_script.py  test_diagnostics.py  test_effect_aggregate.py  test_full_manifest_requirements.py  test_hf_download_config.py  test_judge_contracts.py  test_judge_normalizer.py  test_llm_client.py  test_llm_factory.py  test_llm_usage.py  test_logging_schemas.py  (+39 more)
(+111 files in other folders)
