[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmas-trgc"
version = "0.1.0"
description = "Runtime foundation for LMAS-TRGC communication attack and defense experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
